[package]
name = "noise_search_deps_rocksdb"
description = "Fork of rocksdb crate for Noise"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
license = "Apache-2.0"
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/pipedown/rust-rocksdb"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[lib]
name = "rocksdb"

[features]
default = []
valgrind = []

[dependencies]
libc = "0.2"
noise_search_deps_librocksdb-sys = { path = "librocksdb-sys", version = "0.1.0" }

[dev-dependencies]
integer-encoding = "1.0.3"
