[package]
name = "noise_search_deps_librocksdb-sys"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Fork of librocksdb-sys crate for Noise"
readme = "README.md"
repository = "https://github.com/pipedown/rust-rocksdb.git"
keywords = [ "ffi", "rocksdb" ]

build = "build.rs"
links = "rocksdb"

[lib]
name = "librocksdb_sys"

[features]
default = [ "static" ]
static = []

[dependencies]
libc = "0.2"

[dev-dependencies]
const-cstr = "0.2"

[build-dependencies]
gcc = { version = "0.3", features = ["parallel"] }
make-cmd = "0.1"
